fixed style mobile, tablet, pc, added  overflow: hidden for text fields

--- a/src/views/ContactsView/ContactsPage.module.css
+++ b/src/views/ContactsView/ContactsPage.module.css
@@ -1,8 +1,10 @@
 .title {
+  padding: 0;
   margin-top: 40px;
   margin-bottom: 10px;
 
   text-align: center;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
