--- a/src/views/ContactsView/Teammate/Teammate.module.css
+++ b/src/views/ContactsView/Teammate/Teammate.module.css
@@ -1,12 +1,29 @@
 .member {
   margin-bottom: 20px;
+  width: 280px;
+  height: 370px;
+
   background-color: #ffffff;
   filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.05));
+}
+
+@media screen and (min-width: 768px) {
+  .member {
+    width: 352px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .member {
+    width: 295px;
+  }
 }
 
 .member h3 {
   padding-left: 30px;
   padding-bottom: 6px;
+
+  overflow: hidden;
 }
 
 .position {
@@ -17,6 +34,7 @@
   font-weight: 400;
   line-height: 1;
   text-align: left;
+  overflow: hidden;
 }
 
 .photo {
@@ -25,7 +43,6 @@
 
 .socialNets {
   padding-left: 30px;
-  padding-bottom: 22px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
